--- a/mahindra-club-pre-processing.ipynb
+++ b/mahindra-club-pre-processing.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Hari-Charan-Reddy-Veerannagari/innomatics-assignments/blob/master/mahindra-club-pre-processing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
@@ -23,15 +13,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g1FcNCljNkpW",
-        "outputId": "f5423a48-f1dd-4a97-b4c5-51811abe50b0"
+        "outputId": "006873a1-fe1c-46a6-d5f8-92c0e74c510f"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n",
+            "Mounted at /content/drive/\n",
             "/content/drive/Shareddrives/Shared Drive/colab-content\n"
           ]
         }
@@ -48,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "lIYdn1woOS1n"
       },
@@ -78,13 +68,13 @@
       ],
       "metadata": {
         "id": "YESyuwIObWeG",
-        "outputId": "9503008e-9d7d-4693-e6fa-6392878a038f",
+        "outputId": "f25ad426-03c5-49b2-8c99-2d26bdd1b5ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 487
         }
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +201,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3fb9ecfd-72a2-4bed-be15-31e15dcc820d\">\n",
+              "  <div id=\"df-1ce689d4-f032-43fe-bfcb-9d1a2e07b46f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -523,7 +513,7 @@
               "</table>\n",
               "<p>341424 rows × 24 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3fb9ecfd-72a2-4bed-be15-31e15dcc820d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1ce689d4-f032-43fe-bfcb-9d1a2e07b46f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -574,12 +564,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3fb9ecfd-72a2-4bed-be15-31e15dcc820d button.colab-df-convert');\n",
+              "          document.querySelector('#df-1ce689d4-f032-43fe-bfcb-9d1a2e07b46f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3fb9ecfd-72a2-4bed-be15-31e15dcc820d');\n",
+              "          const element = document.querySelector('#df-1ce689d4-f032-43fe-bfcb-9d1a2e07b46f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -602,7 +592,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -617,9 +607,9 @@
           "height": 364
         },
         "id": "67iwY6aejLvu",
-        "outputId": "7ffde994-98c7-47b0-8e7b-c6c90395b252"
+        "outputId": "207d9178-e4c7-4a86-9934-726a3d5aa787"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -677,7 +667,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9d446261-4d84-42fd-8a6c-3447c541aa1d\">\n",
+              "  <div id=\"df-313b757c-ed87-4fd5-8f94-9821a55f8238\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -862,7 +852,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9d446261-4d84-42fd-8a6c-3447c541aa1d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-313b757c-ed87-4fd5-8f94-9821a55f8238')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -913,12 +903,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9d446261-4d84-42fd-8a6c-3447c541aa1d button.colab-df-convert');\n",
+              "          document.querySelector('#df-313b757c-ed87-4fd5-8f94-9821a55f8238 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9d446261-4d84-42fd-8a6c-3447c541aa1d');\n",
+              "          const element = document.querySelector('#df-313b757c-ed87-4fd5-8f94-9821a55f8238');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -941,7 +931,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -955,9 +945,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PSHWAtGhjQcC",
-        "outputId": "340251a8-6c15-4a42-dc3f-eaa9994ba1ba"
+        "outputId": "9e554e83-a003-495c-f189-2f3bd9239faa"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -1024,9 +1014,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rO4vB6gMPj04",
-        "outputId": "fdd2a3b5-704a-4fe6-d259-be537ab47ab5"
+        "outputId": "054b8696-a5bb-4dd0-9e4a-13b2b3d07e5c"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1077,52 +1067,259 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "filtered_data = data.filter(regex= '.*id$')\n",
-        "filtered_data.nunique()"
+        "Dropping columns related to id such as reservation_id, persontravellingid and memeberid, because there is a high possibility getting new id data in the real time for new dataset"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mt7SqUGGRNXh",
-        "outputId": "ab025467-af58-4a82-be84-4eee48fc1190"
+        "id": "DMzqAXHE4Py4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.drop(columns= ['reservation_id', 'persontravellingid', 'memberid', 'resort_id'], inplace= True)"
+      ],
+      "metadata": {
+        "id": "mt7SqUGGRNXh"
       },
-      "execution_count": 14,
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Extracting features from existing date related feautures"
+      ],
+      "metadata": {
+        "id": "fBpEMncs4-_2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "date_features = data.filter(regex = '.*date$').copy()\n",
+        "\n",
+        "for column in date_features.columns:\n",
+        "    date_features[column] = pd.to_datetime(date_features[column])\n",
+        "\n",
+        "date_features    "
+      ],
+      "metadata": {
+        "id": "eNMfDo5q4ymL",
+        "outputId": "c250cbbb-1024-4510-ea2e-87d198441cc2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 423
+        }
+      },
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "reservation_id        341424\n",
-              "persontravellingid         6\n",
-              "memberid              101327\n",
-              "resort_id                 32\n",
-              "dtype: int64"
+              "       booking_date checkin_date checkout_date\n",
+              "0        2018-05-04   2018-05-04    2018-06-04\n",
+              "1        2015-01-23   2015-11-04    2015-04-16\n",
+              "2        2015-01-28   2015-01-02    2015-05-02\n",
+              "3        2015-02-05   2015-11-06    2015-06-16\n",
+              "4        2015-02-09   2015-12-14    2015-12-19\n",
+              "...             ...          ...           ...\n",
+              "341419   2019-11-02   2019-02-27    2019-01-03\n",
+              "341420   2019-02-27   2019-02-28    2019-01-03\n",
+              "341421   2019-02-27   2019-02-27    2019-02-28\n",
+              "341422   2019-02-27   2019-02-28    2019-01-03\n",
+              "341423   2019-02-28   2019-01-03    2019-02-03\n",
+              "\n",
+              "[341424 rows x 3 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-80f2aef8-3d20-4fa2-bf0a-c11923a18b19\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>booking_date</th>\n",
+              "      <th>checkin_date</th>\n",
+              "      <th>checkout_date</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2018-05-04</td>\n",
+              "      <td>2018-05-04</td>\n",
+              "      <td>2018-06-04</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2015-01-23</td>\n",
+              "      <td>2015-11-04</td>\n",
+              "      <td>2015-04-16</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2015-01-28</td>\n",
+              "      <td>2015-01-02</td>\n",
+              "      <td>2015-05-02</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2015-02-05</td>\n",
+              "      <td>2015-11-06</td>\n",
+              "      <td>2015-06-16</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2015-02-09</td>\n",
+              "      <td>2015-12-14</td>\n",
+              "      <td>2015-12-19</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>341419</th>\n",
+              "      <td>2019-11-02</td>\n",
+              "      <td>2019-02-27</td>\n",
+              "      <td>2019-01-03</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>341420</th>\n",
+              "      <td>2019-02-27</td>\n",
+              "      <td>2019-02-28</td>\n",
+              "      <td>2019-01-03</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>341421</th>\n",
+              "      <td>2019-02-27</td>\n",
+              "      <td>2019-02-27</td>\n",
+              "      <td>2019-02-28</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>341422</th>\n",
+              "      <td>2019-02-27</td>\n",
+              "      <td>2019-02-28</td>\n",
+              "      <td>2019-01-03</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>341423</th>\n",
+              "      <td>2019-02-28</td>\n",
+              "      <td>2019-01-03</td>\n",
+              "      <td>2019-02-03</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>341424 rows × 3 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-80f2aef8-3d20-4fa2-bf0a-c11923a18b19')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-80f2aef8-3d20-4fa2-bf0a-c11923a18b19 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-80f2aef8-3d20-4fa2-bf0a-c11923a18b19');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 34
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "- reservation_id is unique for each reservation and this does not add any information for regression.\n",
-        "- "
-      ],
-      "metadata": {
-        "id": "y9U9ibv3ROsK"
-      }
     }
   ],
   "metadata": {
     "colab": {
       "name": "Mahindra club pre-processing",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
